--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -47,3 +47,12 @@ body {
     font-size: 2.1rem;
     color: var(--font-grey);
 }
+
+/* FOOTER */
+
+.text-footer {
+    color: var(--font-grey);
+    text-align: right;
+    font-size: 2rem;
+    font-family: var(--font-family-verdana);
+}
